[gd_scene load_steps=7 format=2]

[ext_resource path="res://levels/bottomhud.tscn" type="PackedScene" id=1]
[ext_resource path="res://backgounds/night-sky-at-ceres.jpg" type="Texture" id=2]
[ext_resource path="res://levels/ui/scene.gd" type="Script" id=4]
[ext_resource path="res://fonts/start.tres" type="DynamicFont" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0.8, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0.8, 0, 1 )

[node name="Scene" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = -640.0
margin_bottom = -360.0
script = ExtResource( 4 )

[node name="Night Sky" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 2 )

[node name="Game name" type="Label" parent="."]
margin_top = 3.0
margin_right = 1280.0
margin_bottom = 73.0
custom_fonts/font = ExtResource( 5 )
text = "BUTTON_SCENESELECT"
align = 1
valign = 1

[node name="Bottomhud" parent="." instance=ExtResource( 1 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 111.0
margin_top = 173.0
margin_right = 1128.0
margin_bottom = 651.0

[node name="Disclaimer" type="Button" parent="VBoxContainer"]
margin_right = 1017.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 5 )
custom_styles/focus = SubResource( 1 )
text = "BUTTON_SCENE_DISCLAIMER"

[node name="Testrooms" type="Button" parent="VBoxContainer"]
margin_top = 58.0
margin_right = 1017.0
margin_bottom = 112.0
custom_fonts/font = ExtResource( 5 )
custom_styles/focus = SubResource( 1 )
text = "BUTTON_TESTROOMS"

[node name="Ceres" type="Button" parent="VBoxContainer"]
margin_top = 116.0
margin_right = 1017.0
margin_bottom = 170.0
custom_fonts/font = ExtResource( 5 )
custom_styles/focus = SubResource( 1 )
text = "BUTTON_CERES"

[node name="Results" type="Button" parent="VBoxContainer"]
margin_top = 174.0
margin_right = 1017.0
margin_bottom = 228.0
custom_fonts/font = ExtResource( 5 )
custom_styles/focus = SubResource( 1 )
text = "BUTTON_SCORESCREEN"

[node name="Credits" type="Button" parent="VBoxContainer"]
margin_top = 232.0
margin_right = 1017.0
margin_bottom = 286.0
custom_fonts/font = ExtResource( 5 )
custom_styles/focus = SubResource( 1 )
text = "BUTTON_CREDITS"

[node name="WIP" type="Button" parent="VBoxContainer"]
margin_top = 290.0
margin_right = 1017.0
margin_bottom = 344.0
custom_fonts/font = ExtResource( 5 )
custom_styles/focus = SubResource( 1 )
text = "BUTTON_WIP"

[node name="Cutscene" type="Button" parent="VBoxContainer"]
margin_top = 348.0
margin_right = 1017.0
margin_bottom = 402.0
custom_fonts/font = ExtResource( 5 )
custom_styles/focus = SubResource( 1 )
text = "BUTTON_CUTSCENES"

[node name="Back" type="Button" parent="VBoxContainer"]
margin_top = 406.0
margin_right = 1017.0
margin_bottom = 460.0
custom_fonts/font = ExtResource( 5 )
custom_styles/focus = SubResource( 3 )
text = "BUTTON_RETURN"

[connection signal="pressed" from="VBoxContainer/Disclaimer" to="." method="_on_disclaimer_pressed"]
[connection signal="pressed" from="VBoxContainer/Testrooms" to="." method="_on_testrooms_pressed"]
[connection signal="pressed" from="VBoxContainer/Ceres" to="." method="_on_ceres_pressed"]
[connection signal="pressed" from="VBoxContainer/Results" to="." method="_on_results_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/WIP" to="." method="_on_wip_pressed"]
[connection signal="pressed" from="VBoxContainer/Cutscene" to="." method="_on_cutscene_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
